Make it more simple

--- a/index.html
+++ b/index.html
@@ -8,27 +8,32 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <img style="width: 200px" src="images/myAvatar-modified.png" alt="myAvatar" />
+    <img
+      style="width: 200px"
+      src="images/myAvatar-modified.png"
+      alt="myAvatar"
+    />
     <h1>Lê Việt Tùng</h1>
     <p><em>Become the professionnal developer</em></p>
 
     <p>
-      Đến đây để thay đổi những thứ đã làm tôi đánh mất chính mình từng ngày.
-      Bắt đầu ngay bây giờ
+      Many of life's failures are people who did not realize how close they were
+      to success when they gave up
     </p>
 
     <p>
       <em
-        ><strong><a href="contact-me.html">My Contact Details</a></strong></em
+        ><strong><a href="contact-me.html">Contact Me</a></strong></em
       >
     </p>
     <hr size="2" noshade />
 
     <h3>Education</h3>
     <ul>
-      <li>Xuan La Primary School</li>
-      <li>Chu Van An Secondary School</li>
-      <li>Nguyen Binh Khiem High School</li>
+      <li>2007-2012 Xuan La Primary School</li>
+      <li>2012-2016 Chu Van An Secondary School</li>
+      <li>2016-2019 Nguyen Binh Khiem High School</li>
+      <li>2019-? Ha Noi University</li>
     </ul>
 
     <hr size="2" noshade />
@@ -36,24 +41,26 @@
     <h3>My Hobbies</h3>
     <ol>
       <li>
-        Football <em><a href="https://www.realmadrid.com/">Real Madrid</a></em>
+        Football (A big fan of
+        <em><a href="https://www.realmadrid.com/">Real Madrid</a></em
+        >)
       </li>
       <li>
-        Video game (Especially FPS)
+        Video game (Especially FPS like
         <em
           ><a
             href="https://store.steampowered.com/app/730/CounterStrike_Global_Offensive/?"
             >CSGO</a
-          >
+          >)
         </em>
       </li>
-      <li>Movie</li>
-      <li>Music</li>
+      <li>Movie (Horror and thriller sir :D)</li>
+      <li>Music (HipHop4Life)</li>
     </ol>
 
     <hr size="2" noshade />
 
-    <h3>My Hobbies</h3>
+    <h3>My Skills</h3>
 
     <table cellspacing="10px">
       <tr>
